--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,3 +57,8 @@ body {
 .btn-secondary {
   @apply bg-gray-200 hover:bg-gray-300 text-black py-2 px-4 rounded transition-all;
 }
+
+
+.btn-disable {
+  @apply bg-gray-500 text-white py-2 px-4 rounded transition-all;
+}
